style.css
html,
body {
  overflow-x: hidden;
  scroll-behavior: smooth;
}

@font-face {
  font-family: SatoshiBold;
  font-weight: bold;
  src: url("Assets/Satoshi_Complete/Fonts/OTF/Satoshi-Bold.otf");
}
@font-face {
  font-family: SatoshiMedium;
  font-weight: medium;
  src: url("Assets/Satoshi_Complete/Fonts/OTF/Satoshi-Medium.otf");
}
@font-face {
  font-family: SatoshiBlack;
  font-weight: bolder;
  src: url("Assets/Satoshi_Complete/Fonts/OTF/Satoshi-Black.otf");
}
body {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

button:hover {
  cursor: pointer;
}

/* SECTIONS */

.first-section {
  display: flex;
  width: 100%;
  height: 100vh;
  background-color: rgb(255, 246, 240);
}

.tech-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #ffd2c2;
  padding-top: 350px;
  padding-bottom: 350px;
}

.featured-projects-section {
  display: flex;
  flex-direction: column;
  padding-top: 100px;
  align-items: center;
  background-color: rgb(255, 251, 247);
}

.skills-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #ffe0e5;
  height: 800px;
  padding-top: 80px;
}

.contact-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  padding-top: 100px;
  height: 90vh;
  background-color: rgb(255, 251, 247);
}

/*FONT STYLINGS*/

/*TITLES*/
.antonia-granit {
  font-family: SatoshiBold;
  font-size: 20px;
  background-color: #ff5e55;
  color: white;
}

.black-title {
  font-family: SatoshiBlack;
  font-size: 25px;
}

.medium-black-title {
  font-family: SatoshiBlack;
  font-size: 20px;
}

.digital-designer {
  font-family: SatoshiMedium;
  font-size: 17px;
  color: #050d50;
}

.big-title {
  font-family: SatoshiBlack;
  font-style: normal;
  font-weight: 700;
  font-size: 80px;
  line-height: 130px;
  color: #050d50;
}

.big-pink-title {
  font-family: SatoshiBlack;
  font-size: 90px;
  line-height: 162px;
  text-align: center;
  color: #050d50;
  margin-bottom: 75px;
}

/*BODY TEXT*/
.paragraph {
  font-family: "Outfit";
  font-style: normal;
  color: black;
  font-size: 19px;
  line-height: 30px;
}

/*LINKS AND HIGHLIGHTED TEXT*/
.pink {
  background-color: #f85543;
  color: white;
}

.code-languages {
  font-family: SatoshiMedium;
  font-size: 16px;
  margin-top: 24px;
  margin-bottom: 40px;
}

.black {
  background-color: black;
  color: white;
  padding: 2px 6px;
}

.skills-pink {
  background-color: #ff5454;
  color: white;
  font-family: SatoshiMedium;
  font-size: 25px;
  padding: 7px;
}

/*FIRST SECTION*/
.left {
  display: flex;
  flex-direction: column;
  position: absolute;
  margin: 0px;
  padding: 0;
  left: 0;
  top: 0;
  width: 50%;
  height: 100vh;
}

.right-image {
  display: flex;
  position: absolute;
  top: 0;
  right: 0;
  height: 100vh;
  left: 50%;
  background-image: url(Assets/coloured-blob.jpg);
  background-size: cover;
}

/*SCROLL BUTTON*/
.scroll-icon-div {
  position: absolute;
  width: 138px;
  height: 138px;
  left: calc(50% - 138px / 2);
  top: 77%;
}

.scroll-icon {
  /* this makes the scroll button bounce */
  animation: bounce 1s infinite alternate;
}

@keyframes bounce {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(20px);
  }
}

.antonia-info {
  display: flex;
  flex-direction: column;
  width: 85%;
  height: 400px;
  margin: auto;
  margin-top: 100px;
}

.antonia-header {
  display: flex;
  flex-direction: row;
  gap: 25px;
  height: 164px;
  padding-bottom: 20px;
}

.portrait-photo {
  width: 164px;
  height: 164px;
  border-radius: 100px;
}

.antonia-title-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.antonia-header-info {
  display: flex;
}

.social-media-icons {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  width: 100px;
  margin-top: 40px;
}

.social-media-icons i {
  transition: transform 0.2s ease-in-out;
  color: black;
}

.social-media-icons i:hover {
  opacity: 10%;
  transform: scale(1.5);
  }

.social-media-icons i:visited {
color: black;
    }

/*TECH SECTION*/

.tech-information {
  width: 820px;
  height: 108px;
  display: flex;
  align-items: center;
  gap: 143px;
}

/*PROJECT SECTION*/

.project-list {
  display: flex;
  flex-direction: column;
  margin-bottom: 150px;
  width: 820px;
  padding-left: 100px;
}

.project-div {
  display: flex;
  flex-direction: row;
  gap: 20px;
  height: 230px;
  width: 700px;
  padding-bottom: 40px;
  margin-top: 80px;
}

.project-information {
  padding-top: 5px;
  display: flex;
  flex-direction: column;
}

.project-title {
  margin-bottom: 7px;
}

.project-screenshot {
  width: 190px;
  border-radius: 10px;
}

/*PROJECT BUTTON STYLING*/
.project-buttons {
  display: flex;
  width: fit-content;
  gap: 15px;
  margin-top: -10px;
  margin-left: -8px;
}
.project-buttons button .icons {
  width: 32px;
  height: 32px;
}
.project-buttons button i {
  font-size: 30px;
  padding: 7px;
  margin: 5px;
}
.project-buttons button {
  background-color: #f5f5f5;
  border-radius: 40px;
  max-height: 45px;
  margin: 10px 5px 5px 5px;
  padding: 7px 10px;
  border: none;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.live-demo-button {
  width: 164px;
  height: 48px;
  font-size: 16px;
  color: black;
}
.live-demo-button:hover {
  background-color: #c2d209;
  color: black;
  transform: scale(1.12);
}

.view-code-button {
  width: 164px;
  height: 48px;
  font-size: 16px;
  color: black;
}

.view-code-button:hover {
  background-color: #a4ff77;
  color: black;
  transform: scale(1.12);
}

/*SKILLS SECTION*/

.skills-title {
  display: flex;
  margin-top: 121px;
  justify-content: center;
  height: fit-content;
  width: 851px;
}

.skills-lists {
  display: flex;
  justify-content: center;
  width: 851px;
  gap: 70px;
  margin-top: 79px;
}

ul li {
  margin-top: 12px;
  font-family: "Outfit";
  font-size: 19px;
  line-height: 32px;
}

/*CONTACT SECTION*/

.contact-antonia-header {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 25px;
  height: 164px;
  padding-bottom: 20px;
}

.contact-antonia-title-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.contact-info {
  margin-top: 40px;
  margin-bottom: 40px;
}

a[href^="mailto:"] {
  font-family: SatoshiBold;
  font-size: 20px;
  background-color: #ff5e55;
  color: white;
  text-decoration: none;
  padding: 7px 3px 7px 3px;

}

.contact-social-media-icons {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  width: 190px;
  height: 40px;
}

.contact-social-media-icons i {
  transition: transform 0.2s ease-in-out;
  color: black;
}

.contact-social-media-icons i:hover {
  opacity: 10%;
  transform: scale(1.5);
  }

.contact-social-media-icons i:visited {
color: black;
    }


/*TABLET STYLING*/
@media (min-width: 667px) and (max-width: 1024px) {
  .right-image {
    display: none;
  }

  .left {
    width: 100%;
  }

  .antonia-info {
    margin-top: 200px;
  }

  .tech-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    order: 2;
    padding-top: 350px;
    padding-bottom: 350px;
  }

  .tech-information {
    width: 90%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 60px;
    text-align: center;
  }
}

/*MOBILE STYLING*/
@media (max-width: 667px) {
  
  .big-title {
  font-size: 60px;
  line-height: 65px;
  color: #050d50;
}
  .first-section {
    height: 950px;
  }

  .scroll-icon-div {
    display: none;
  }

  .right-image {
    display: none;
  }

  .left {
    width: 92%;
  }

  .antonia-info {
    width: 95%;
    margin-top: 60px;
    margin-left: 7%;
  }

  .antonia-title-text {
    display: flex;
    flex-direction: column;
  }

  .antonia-header {
    display: flex;
    flex-direction: column;
    height: 250px;
  }

  .antonia-header-info {
    padding-bottom: 40px;
  }

  .social-media-icons {
    margin-top: 0px;
  }

  .portrait-photo-div {
    display: flex;
    justify-content: center;
  }

  .tech-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    order: 2;
    padding-top: 350px;
    padding-bottom: 350px;
  }

  .tech-information {
    width: 90%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 60px;
    text-align: center;
  }

  .featured-projects-section {
    padding-top: 80px;
    padding-left: 0px;
  }

  .project-list {
    display: flex;
    flex-direction: column;
    padding-bottom: 0px;
    width: 90%;
    padding-left: 0px;
  }
  
  .project-div {
    flex-direction: column;
    height: 500px;
    width: 360px;
  }
  
  .project-screenshot {
    display: flex;
    width: 190px;
  }

  .project-buttons {
    display: flex;
    flex-direction: row;
    gap: 5px;
    width: 164px;
  }

  .skills-section {
    height: fit-content;
    padding-bottom: 120px;
  }

  .skills-title {
    margin-top: 120px;
    justify-content: center;
    text-align: center;
    height: fit-content;
    width: fit-content;
  }
  
  .skills-lists {
    flex-direction: column;
    justify-content: center;
    text-align: center;
  }
}

